# engineering-ownership

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.ko.md  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.engineering/: contract.json
.engineering/evidence/: correct-git-attribution.json  documentation-first-workflow.json  v0-1-0-public-release.json  v0-2-immediate-workflow.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  competency-proposal.yml  config.yml  workflow-proposal.yml
.github/workflows/: ci.yml  release.yml
docs/engineering/changes/: correct-git-attribution.md  documentation-first-workflow.md  v0-1-0-public-release.md  v0-2-immediate-workflow.md
docs/engineering/decisions/: correct-git-attribution.md  documentation-first-workflow.md  v0-1-0-public-release.md  v0-2-immediate-workflow.md
docs/engineering/runbooks/: correct-git-attribution.md  documentation-first-workflow.md  v0-1-0-public-release.md  v0-2-immediate-workflow.md
docs/releases/: v0.1.0.md  v0.2.0.md
docs/research/: 2026-07-23-workflow-comparison.md
docs/security/: threat-model.md
docs/tutorials/: first-work.ko.md  first-work.md
docs/validation/: legacy-project-read-only.md  plugin-discovery.md  skill-evaluation.md  v0.2-host-and-skill.md
scripts/: build_release.py  grade_skill_evals.py  validate_distribution.py  validate_release_tag.py
tests/: test_cli.py  test_distribution.py  test_hooks.py  test_release.py
(+32 files in other folders)
